[ft-login-ui-162554547] Added Css stylilng

--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,15 @@ button:hover {
 .description a {
     color: rgb(227, 227, 240);
 }
+.loginform h2 {
+  text-align: center;
+}
+.psw {
+  text-align: center;
+}
+.psw a {
+  color: white;
+}
 
 /* Change styles for span and cancel button on extra small screens */
 @media screen and (max-width: 300px) {
